iac-macro-usage/tests/fails/lambda_negative_time.stderr
error: memory and time needs a positive value
 --> tests/fails/lambda_negative_time.rs:5:33
  |
5 |         lambda(name=name,mem=-10)
  |                                 ^
